--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                     
                                     <!--Please feel free to download my resume to learn more about my qualifications and experience.--> </p>
 									<ul class="actions">
-										<li><a href="docs/Resume%20-%20Anini%20Amoakon.pdf" download="Anini-Resume.pdf" class="button primary icon solid fa-download">Download Resume</a></li>
+										<li><a href="docs/Resume,%20Anini%20Amoakon.pdf" download="Resume, Anini Amoakon.pdf" class="button primary icon solid fa-download">Download Resume</a></li>
 									</ul>
 								</section>
                             	<ul class="icons">
