--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
 					<div class="project" data-tags="Data_analysis">
 						<div class="project-details">
 							<img src="images/demographic.jpeg" alt="Project Thumbnail" class="project-thumbnail">
-							<h4 class="project-title">Demographic data analysis</h4>
-							<p class="project-description">Demographic data analysis using Pandas. I was given
-								demographic data extracted from the 1994 Census database.</p>
+							<h4 class="project-title">Demographic Data Analysis</h4>
+							<p class="project-description">Uncover insights with Pandas! Analyzing demographic data from the 1994 Census database.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/aef38220524c9dfad9d93f2248dacfab954b4465/Demographic/Demographic%20data%20analyzer.ipynb"
