--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<p class="project-description">Uncover insights with Pandas! Analyzing demographic data from the 1994 Census database.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/aef38220524c9dfad9d93f2248dacfab954b4465/Demographic/Demographic%20data%20analyzer.ipynb"
+								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Demographic/Demographic%20data%20analyzer.ipynb"
 									class="read-more-link" target="_blank">
 									<span class="fa fa-folder-open"></span> Read more</a>
 							</div>
@@ -148,7 +148,7 @@
 								since 1880. Used the data to predict the sea level change through the year 2050.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/aef38220524c9dfad9d93f2248dacfab954b4465/Sea%20Level/Sea%20Level%20Predictor.ipynb"
+								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Sea%20Level/Sea%20Level%20Predictor.ipynb"
 									class="read-more-link" target="_blank">
 									<span class="fa fa-folder-open"></span> Read more</a>
 							</div>
@@ -159,11 +159,10 @@
 						<div class="project-details">
 							<img src="images/medicaldata.jpeg" alt="Project Thumbnail" class="project-thumbnail">
 							<h4 class="project-title">Medical Data analysis</h4>
-							<p class="project-description">I visualize and made calculations from medical examination
-								data using Matplotlib, Seaborn, and Pandas.</p>
+							<p class="project-description">Analyze medical examination data with Matplotlib, Seaborn, and Pandas for insightful visualizations and calculations.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/aef38220524c9dfad9d93f2248dacfab954b4465/Medical%20Data/Medical%20Data%20Visualizer.ipynb"
+								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Medical%20Data/Medical%20Data%20Visualizer.ipynb"
 									class="read-more-link" target="_blank">
 									<span class="fa fa-folder-open"></span> Read more</a>
 							</div>
@@ -195,7 +194,7 @@
 								2016-05-09 to 2019-12-03.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/aef38220524c9dfad9d93f2248dacfab954b4465/Page%20View%20Time%20Series/Page%20View%20Time%20Series%20Visualizer.ipynb"
+								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Page%20View%20Time%20Series/Page%20View%20Time%20Series%20Visualizer.ipynb"
 									class="read-more-link" target="_blank">
 									<span class="fa fa-folder-open"></span> Read more</a>
 							</div>
@@ -242,7 +241,7 @@
 								and elements in a 3 x 3 matrix.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/902ae0e0c78401b963e386971a4b2f8b2485c78d/Mean-Variance-Standard%20Deviation%20Calculator.ipynb"
+								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Mean-Variance-Standard%20Deviation%20Calculator.ipynb"
 									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
 									more</a>
 							</div>
@@ -291,7 +290,7 @@
 								ISS, Printing server, File sharing, Backup server) for a fictive company.</p>
 							<div class="project-date">04-02-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/Academic-Projects/blob/63adf30021f27b21f3e6d3ea249a584203b1ff52/README%20Network%20Admin.md"
+								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20Network%20Admin.md"
 									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
 									more</a>
 							</div>
@@ -306,7 +305,7 @@
 								and audio editing. </p>
 							<div class="project-date">04-01-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/Academic-Projects/blob/63adf30021f27b21f3e6d3ea249a584203b1ff52/README%20Multimedia.md"
+								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20Multimedia.md"
 									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
 									more</a>
 							</div>
@@ -321,7 +320,7 @@
 								the customer's home</p>
 							<div class="project-date">04-01-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/Academic-Projects/blob/63adf30021f27b21f3e6d3ea249a584203b1ff52/README%20Fiber%20To%20The%20Home.md"
+								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20Fiber%20To%20The%20Home.md"
 									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
 									more</a>
 							</div>
@@ -336,7 +335,7 @@
 								identity-based network access control and policy enforcement system.</p>
 							<div class="project-date">04-01-2023</div>
 							<div class="read-more">
-								<a href="https://github.com/Anini-A/Academic-Projects/blob/63adf30021f27b21f3e6d3ea249a584203b1ff52/README%20CISCO%20ISE%20Deployment.md"
+								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20CISCO%20ISE%20Deployment.md"
 									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
 									more</a>
 							</div>
