--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-C58XWP0H25"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-C58XWP0H25');
+	</script>
 </head>
 
 <body class="is-preload">
@@ -130,7 +140,8 @@
 						<div class="project-details">
 							<img src="images/demographic.jpeg" alt="Project Thumbnail" class="project-thumbnail">
 							<h4 class="project-title">Demographic Data Analysis</h4>
-							<p class="project-description">Uncover insights with Pandas! Analyzing demographic data from the 1994 Census database.</p>
+							<p class="project-description">Uncover insights with Pandas! Analyzing demographic data from
+								the 1994 Census database.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Demographic/Demographic%20data%20analyzer.ipynb"
@@ -159,7 +170,8 @@
 						<div class="project-details">
 							<img src="images/medicaldata.jpeg" alt="Project Thumbnail" class="project-thumbnail">
 							<h4 class="project-title">Medical Data analysis</h4>
-							<p class="project-description">Analyze medical examination data with Matplotlib, Seaborn, and Pandas for insightful visualizations and calculations.</p>
+							<p class="project-description">Analyze medical examination data with Matplotlib, Seaborn,
+								and Pandas for insightful visualizations and calculations.</p>
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Medical%20Data/Medical%20Data%20Visualizer.ipynb"
