--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#intro" onclick="trackButtonClick('Me')">Me</a></li>
-					<li><a href="#Projects" onclick="trackButtonClick('Projects')">Projects</a></li>
-					<li><a href="#resume" onclick="trackButtonClick('Resume')">Resume</a></li>
+					<li><a href="#intro" onclick="trackMeButtonClick()">Me</a></li>
+					<li><a href="#Projects" onclick="trackProjectsButtonClick()">Projects</a></li>
+					<li><a href="#resume" onclick="trackResumeButtonClick()">Resume</a></li>
 					<!--<li><a href="#contact">Contact</a></li>-->
 					<!--<li><a href="#elements">Elements</a></li>-->
 				</ul>
