--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Anini - IT Analyst (software & hardware), Data Analyst</title>
+	<title>IT Analyst (software & hardware), Data Analyst</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,40 @@
 	</noscript>
 
 	<!-- Google tag (gtag.js) -->
-	<script src="assets/js/analytics.js"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-C58XWP0H25"></script>
+
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+
+		gtag('js', new Date());
+		gtag('config', 'G-C58XWP0H25');
+
+		function trackMeButtonClick() {
+			gtag('event', 'Button_Click', {
+				'event_category': 'Button',
+				'event_label': 'Me',
+			});
+		}
+
+		function trackProjectsButtonClick() {
+			gtag('event', 'Button_Click', {
+				'event_category': 'Button',
+				'event_label': 'Projects',
+			});
+		}
+
+		function trackResumeButtonClick() {
+			gtag('event', 'Button_Click', {
+				'event_category': 'Button',
+				'event_label': 'Resume',
+			});
+		}
+	</script>
+
 </head>
 
 <body class="is-preload">
