--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Sea%20Level/Sea%20Level%20Predictor.ipynb"
 								class="read-more-link" target="_blank"
 								onclick="trackReadMoreClick('Sea Level Predictor')">
-								<span class="fa fa-folder-open"></span> Read more
+								<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
