--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Sea%20Level/Sea%20Level%20Predictor.ipynb"
-								class="read-more-link" target="_blank"
-								onclick="trackReadMoreClick('Sea Level Predictor')">
-								<span class="fa fa-folder-open"></span> Read more </a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Sea Level Predictor')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -205,8 +205,9 @@
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Medical%20Data/Medical%20Data%20Visualizer.ipynb"
-									class="read-more-link" target="_blank">
-									<span class="fa fa-folder-open"></span> Read more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Medical Data analysis')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -221,8 +222,9 @@
 							<div class="project-date">05-18-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/R-Project-Data-Analytics/blob/main/google-data-analytics-bellabeat-project.ipynb"
-									class="read-more-link" target="_blank">
-									<span class="fa fa-folder-open"></span> Read more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Google - BellaBeat Case Study')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -237,8 +239,9 @@
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Page%20View%20Time%20Series/Page%20View%20Time%20Series%20Visualizer.ipynb"
-									class="read-more-link" target="_blank">
-									<span class="fa fa-folder-open"></span> Read more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Page View Time Series Visualizer')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -254,8 +257,8 @@
 							<div class="project-date">03-31-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/SQL-Challenge" class="read-more-link"
-									target="_blank">
-									<span class="fa fa-folder-open"></span> Read more</a>
+									target="_blank" onclick="trackReadMoreClick('SQL Challenge Unlocked!')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -268,8 +271,9 @@
 							<div class="project-date">06-21-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/Password_generator/blob/main/psw_generator.ipynb"
-									class="read-more-link" target="_blank">
-									<span class="fa fa-folder-open"></span> Read more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Python password generator')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -284,8 +288,9 @@
 							<div class="project-date">05-27-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/data-analysis-with-python/blob/main/Mean-Variance-Standard%20Deviation%20Calculator.ipynb"
-									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
-									more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Mean-Variance-Standard Deviation Calculator')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -299,8 +304,8 @@
 							<div class="project-date">06-21-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/web/blob/main/README.md" class="read-more-link"
-									target="_blank">
-									<span class="fa fa-folder-open"></span> Read more</a>
+									target="_blank" onclick="trackReadMoreClick('How I built my portfolio website?')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -318,8 +323,9 @@
 							<div class="project-date">04-17-2023</div>
 							<div class="read-more">
 								<a href="https://public.tableau.com/app/profile/anini7720/viz/CustomerAnalysis_168110020202399650/SalesAnalysis"
-									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
-									more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Sales Analysis with Tableau')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -333,8 +339,9 @@
 							<div class="project-date">04-02-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20Network%20Admin.md"
-									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
-									more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Network administrator')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -348,8 +355,9 @@
 							<div class="project-date">04-01-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20Multimedia.md"
-									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
-									more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Multimedia editing')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -363,8 +371,9 @@
 							<div class="project-date">04-01-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20Fiber%20To%20The%20Home.md"
-									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
-									more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('Fibre optic deployment (FTTH)')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
@@ -378,11 +387,13 @@
 							<div class="project-date">04-01-2023</div>
 							<div class="read-more">
 								<a href="https://github.com/Anini-A/Academic-Projects/blob/main/README%20CISCO%20ISE%20Deployment.md"
-									class="read-more-link" target="_blank"><span class="fa fa-folder-open"></span> Read
-									more</a>
+									class="read-more-link" target="_blank"
+									onclick="trackReadMoreClick('CISCO ISE Deployment')">
+									<span class="fa fa-folder-open"></span> Read more </a>
 							</div>
 						</div>
 					</div>
+				</div>
 
 			</article>
 
@@ -701,7 +712,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<!--<p class="copyright">&copy; Redesigned using <a href="https://html5up.net" target="_blank">HTML5</a>.</p>-->
+			 <!-- <p class="copyright">&copy; Redesigned using <a href="https://html5up.net" target="_blank">HTML5</a>.</p> -->
 		</footer>
 
 	</div>
