--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
 			<!-- Intro -->
 			<article id="intro">
 				<h2 class="major">👨🏾‍💻 ME</h2>
-				<span class="image main"><img src="images/askmeanything.png" alt="" /></span>
-				<p>Welcome to my portfolio website! I am a versatile professional experienced as both a Senior IT
-					Analyst and a Data Analyst. With a strong background in Computer Science, I am dedicated to
-					delivering impactful results through data analysis and technology-driven solutions.</p>
+				<!--<span class="image main"><img src="images/askmeanything.png" alt="" /></span>-->
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/anini-amoakon/" target="_blank"
 							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -133,16 +130,89 @@
 				</p>
 
 				<h4>Education and certifications</h4>
-				<ul>
-					<li><b>Computer Science </b> | Université de Saint-Boniface 🇨🇦 </li>
-					<li><b>Network & Telecommunication </b> | Ecole Supérieur de Technologie 🇨🇮 </li>
-					<li><b>Data Analysis with Python </b>FreeCodeCamp</li>
-					<li><b>Google Data Analytics </b>Coursera</li>
-					<li><b>ITIL Foundation V4 </b>Codecademy</li>
-					<li><b>SQL </b>Codecademy</li>
-					<li><b>Python 3 </b>Codecademy</li>
-					<li><b>SQL Bootcamp </b>Wealthsimple</li>
-				</ul>
+
+				<!--education-grid-->
+
+				<div class="education-grid">
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">Computer Science</h5>
+							<p class="education-institution">Université de Saint-Boniface 🇨🇦</p>
+							<p class="education-date">2018</p>
+							<p class="education-degree">Diploma</p>
+							<img src="images/USB logo.jpg" alt="Université de Saint-Boniface Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">Network & Telecom</h5>
+							<p class="education-institution">Ecole Supérieur de Technologie 🇨🇮</p>
+							<p class="education-date">2016</p>
+							<p class="education-degree">Advanced Technical Diploma</p>
+							<img src="images/EST logo.jpeg" alt="Ecole Supérieur de Technologie Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">Data Analyst With Python</h5>
+							<p class="education-institution">FreeCodeCamp</p>
+							<p class="education-date">2023</p>
+							<p class="education-degree">Certificate</p>
+							<img src="images/FCC logo.png" alt="Ecole Supérieur de Technologie Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">Google Data Analytics </h5>
+							<p class="education-institution">Google</p>
+							<p class="education-date">2022</p>
+							<p class="education-degree">Certificate</p>
+							<img src="images/Google logo.png" alt="Ecole Supérieur de Technologie Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">SQL</h5>
+							<p class="education-institution">Codecademy</p>
+							<p class="education-date">2021</p>
+							<p class="education-degree">Certificate</p>
+							<img src="images/CodeCademy logo.webp" alt="Université de Saint-Boniface Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">Python 3</h5>
+							<p class="education-institution">Codecademy</p>
+							<p class="education-date">2021</p>
+							<p class="education-degree">Certificate</p>
+							<img src="images/CodeCademy logo.webp" alt="Université de Saint-Boniface Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<h5 class="education-title">SQL Bootcamp</h5>
+							<p class="education-institution">Wealthsimple</p>
+							<p class="education-date">2022</p>
+							<p class="education-degree">Corporate</p>
+							<img src="images/Wealthsimple logo.png" alt="Université de Saint-Boniface Logo"
+								class="education-logo">
+						</div>
+					</div>
+
+				</div>
 
 				<h4>Area of expertise</h4>
 				<ul>
