--- a/index.html
+++ b/index.html
@@ -117,16 +117,14 @@
 
 				<h4>Professional Experience</h4>
 				<p>
-					With over 4 years of experience as a Senior IT Analyst and a developing Data Analyst, I have
-					actively participated in numerous projects focused on enhancing operational efficiency and driving
-					business success. Drawing upon my strong background in Computer Science, I have effectively utilized
-					my expertise in IT analysis to identify valuable insights, streamline processes, and implement
-					innovative technology solutions.<br><br>
-					Moreover, I have continuously expanded my knowledge and honed my skills as a Data Analyst
-					through project-based work. You will have the opportunity to explore these projects in detail within
-					the dedicated project sections. By maintaining a commitment to continuous learning and adaptation, I
-					consistently deliver effective and efficient solutions that cater to the evolving needs of
-					organizations.<br>
+					Experienced IT and Data Analyst with 4+ years of proven expertise in driving operational efficiency
+					and fostering business growth.
+					Leveraging a solid foundation in Computer Science, I excel in IT analysis to uncover insights,
+					optimize processes, and deploy cutting-edge tech solutions. <br>
+					My journey as a Data Analyst is marked by ongoing skill refinement through hands-on projects,
+					detailed in the project portfolio.
+					Committed to lifelong learning, I deliver adaptable solutions meeting dynamic organizational
+					needs.<br>
 				</p>
 
 				<h4>Education and certifications</h4>
@@ -159,10 +157,10 @@
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Data Analyst With Python</h5>
+							<h5 class="education-title">Data Analysis w/ Python</h5>
 							<p class="education-institution">FreeCodeCamp</p>
 							<p class="education-date">2023</p>
-							<p class="education-degree">Certificate</p>
+							<p class="education-degree">Professional certificate</p>
 							<img src="images/FCC logo.png" alt="Ecole Supérieur de Technologie Logo"
 								class="education-logo">
 						</div>
@@ -170,10 +168,10 @@
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Google Data Analytics </h5>
+							<h5 class="education-title">Google Data Analytics</h5>
 							<p class="education-institution">Google</p>
 							<p class="education-date">2022</p>
-							<p class="education-degree">Certificate</p>
+							<p class="education-degree">Professional certificate</p>
 							<img src="images/Google logo.png" alt="Ecole Supérieur de Technologie Logo"
 								class="education-logo">
 						</div>
@@ -184,7 +182,7 @@
 							<h5 class="education-title">SQL</h5>
 							<p class="education-institution">Codecademy</p>
 							<p class="education-date">2021</p>
-							<p class="education-degree">Certificate</p>
+							<p class="education-degree">Professional certificate</p>
 							<img src="images/CodeCademy logo.webp" alt="Université de Saint-Boniface Logo"
 								class="education-logo">
 						</div>
@@ -195,7 +193,7 @@
 							<h5 class="education-title">Python 3</h5>
 							<p class="education-institution">Codecademy</p>
 							<p class="education-date">2021</p>
-							<p class="education-degree">Certificate</p>
+							<p class="education-degree">Professional certificate</p>
 							<img src="images/CodeCademy logo.webp" alt="Université de Saint-Boniface Logo"
 								class="education-logo">
 						</div>
@@ -206,7 +204,7 @@
 							<h5 class="education-title">SQL Bootcamp</h5>
 							<p class="education-institution">Wealthsimple</p>
 							<p class="education-date">2022</p>
-							<p class="education-degree">Corporate</p>
+							<p class="education-degree">Professional development</p>
 							<img src="images/Wealthsimple logo.png" alt="Université de Saint-Boniface Logo"
 								class="education-logo">
 						</div>
@@ -216,11 +214,10 @@
 
 				<h4>Area of expertise</h4>
 				<ul>
-					<li>End User Technologies and Technical Troubleshooting</li>
-					<li>IT Service Management</li>
 					<li>Data Analysis</li>
-					<li>IT Infrastructure and Network</li>
+					<li>IT Service and Operations management</li>
 					<li>Communication and Stakeholder Management</li>
+					<li>End User Technologies and Technical Troubleshooting</li>
 				</ul>
 
 				<h4>Personal Interests</h4>
@@ -489,11 +486,10 @@
 
 					<p>Thank you for visiting my website. I appreciate your interest in my work. If you have any
 						questions or would like to discuss potential hiring or project opportunities, I invite you to
-						reach out to me via email or through my LinkedIn profile, which you can find linked below. I
+						reach out to me through my LinkedIn, which you can find linked below. I
 						look forward to connecting with you and exploring how I can bring value to your team or project.
 						<br>
 
-						<!--Please feel free to download my resume to learn more about my qualifications and experience.-->
 					</p>
 					<ul class="actions">
 						<li><a href="docs/Resume,%20Anini%20Amoakon.pdf" download="Resume, Anini Amoakon.pdf"
@@ -808,6 +804,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/filter.js"></script>
+	<script src="assets/js/sorteduitem.js"></script>
 
 </body>
 
