--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#intro" onclick="trackMeButtonClick()">Me</a></li>
-					<li><a href="#Projects" onclick="trackProjectsButtonClick()">Projects</a></li>
-					<li><a href="#resume" onclick="trackResumeButtonClick()">Resume</a></li>
+					<li><a href="#intro" onclick="trackMeButtonClick()">Intro</a></li>
+					<li><a href="#projects" onclick="trackProjectsButtonClick()">Projects</a></li>
+					<li><a href="#connect" onclick="trackResumeButtonClick()">Connect</a></li>
 					<!--<li><a href="#contact">Contact</a></li>-->
 					<!--<li><a href="#elements">Elements</a></li>-->
 				</ul>
@@ -127,6 +127,14 @@
 					needs.<br>
 				</p>
 
+				<h4>Area of expertise</h4>
+				<ul>
+					<li>Data Analysis</li>
+					<li>IT Service and Operations management</li>
+					<li>Communication and Stakeholder Management</li>
+					<li>End User Technologies and Technical Troubleshooting</li>
+				</ul>
+
 				<h4>Education and certifications</h4>
 
 				<!--education-grid-->
@@ -135,90 +143,127 @@
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Computer Science</h5>
-							<p class="education-institution">Université de Saint-Boniface 🇨🇦</p>
-							<p class="education-date">2018</p>
-							<p class="education-degree">Diploma</p>
-							<img src="images/USB logo.jpg" alt="Université de Saint-Boniface Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/USB logo.jpg" alt="Université de Saint-Boniface Logo"
+									class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Computer Science</h5>
+								<p class="education-institution">Université de Saint-Boniface 🇨🇦</p>
+								<p class="education-date">2018</p>
+								<p class="education-degree">Diploma</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Network & Telecom</h5>
-							<p class="education-institution">Ecole Supérieur de Technologie 🇨🇮</p>
-							<p class="education-date">2016</p>
-							<p class="education-degree">Advanced Technical Diploma</p>
-							<img src="images/EST logo.jpeg" alt="Ecole Supérieur de Technologie Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/EST logo.jpeg" alt="Ecole Supérieur de Technologie Logo"
+									class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Network & Telecom</h5>
+								<p class="education-institution">Ecole Supérieur de Technologie 🇨🇮</p>
+								<p class="education-date">2016</p>
+								<p class="education-degree">Advanced Technical Diploma</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Data Analysis w/ Python</h5>
-							<p class="education-institution">FreeCodeCamp</p>
-							<p class="education-date">2023</p>
-							<p class="education-degree">Professional certificate</p>
-							<img src="images/FCC logo.png" alt="Ecole Supérieur de Technologie Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/FCC logo.png" alt="FreeCodeCamp Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Data Analysis - Python</h5>
+								<p class="education-institution">FreeCodeCamp</p>
+								<p class="education-date">2023</p>
+								<p class="education-degree">Professional certificate</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Google Data Analytics</h5>
-							<p class="education-institution">Google</p>
-							<p class="education-date">2022</p>
-							<p class="education-degree">Professional certificate</p>
-							<img src="images/Google logo.png" alt="Ecole Supérieur de Technologie Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/Google logo.png" alt="Google Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Data Analytics</h5>
+								<p class="education-institution">Google</p>
+								<p class="education-date">2022</p>
+								<p class="education-degree">Professional certificate</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">SQL</h5>
-							<p class="education-institution">Codecademy</p>
-							<p class="education-date">2021</p>
-							<p class="education-degree">Professional certificate</p>
-							<img src="images/CodeCademy logo.webp" alt="Université de Saint-Boniface Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/CodeCademy logo.webp" alt="Codecademy Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">SQL</h5>
+								<p class="education-institution">Codecademy</p>
+								<p class="education-date">2021</p>
+								<p class="education-degree">Professional certificate</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">Python 3</h5>
-							<p class="education-institution">Codecademy</p>
-							<p class="education-date">2021</p>
-							<p class="education-degree">Professional certificate</p>
-							<img src="images/CodeCademy logo.webp" alt="Université de Saint-Boniface Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/CodeCademy logo.webp" alt="Codecademy Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Python 3</h5>
+								<p class="education-institution">Codecademy</p>
+								<p class="education-date">2021</p>
+								<p class="education-degree">Professional certificate</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="education">
 						<div class="education-details">
-							<h5 class="education-title">SQL Bootcamp</h5>
-							<p class="education-institution">Wealthsimple</p>
-							<p class="education-date">2022</p>
-							<p class="education-degree">Professional development</p>
-							<img src="images/Wealthsimple logo.png" alt="Université de Saint-Boniface Logo"
-								class="education-logo">
+							<div class="education-logo-container">
+								<img src="images/Wealthsimple logo.png" alt="Wealthsimple Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">SQL Bootcamp</h5>
+								<p class="education-institution">Wealthsimple</p>
+								<p class="education-date">2022</p>
+								<p class="education-degree">Professional development</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<div class="education-logo-container">
+								<img src="images/advancedda.png" alt="Google Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Advanced Data Analytics</h5>
+								<p class="education-institution">Google</p>
+								<p class="education-date">2024</p>
+								<p class="education-degree">⏳ In progress</p>
+							</div>
 						</div>
 					</div>
 
 				</div>
-
-				<h4>Area of expertise</h4>
-				<ul>
-					<li>Data Analysis</li>
-					<li>IT Service and Operations management</li>
-					<li>Communication and Stakeholder Management</li>
-					<li>End User Technologies and Technical Troubleshooting</li>
-				</ul>
 
 				<h4>Personal Interests</h4>
 				<p>
@@ -228,7 +273,7 @@
 			</article>
 
 			<!-- Projects -->
-			<article id="Projects">
+			<article id="projects">
 				<h2 class="major">💼Projects</h2>
 
 				<!-- Filter section -->
@@ -473,16 +518,11 @@
 
 			</article>
 
-			<!-- Resume -->
-			<article id="resume">
-				<h2 class="major">📃Resume</h2>
+			<!-- Connect -->
+			<article id="connect">
+				<h2 class="major">📃Connect</h2>
 				<span class="image main"><img src="images/resume1.png" alt="" /></span>
 				<section>
-
-					<ul>
-						<li><b>High-net-worth client associate</b> | Wealthsimple | 2021 - Now </li>
-						<li><b>Senior Information Technology Analyst</b> | IG Wealth Management | 2018 - 2021 </li>
-					</ul>
 
 					<p>Thank you for visiting my website. I appreciate your interest in my work. If you have any
 						questions or would like to discuss potential hiring or project opportunities, I invite you to
@@ -491,12 +531,12 @@
 						<br>
 
 					</p>
-					<ul class="actions">
+					<!-- <ul class="actions">
 						<li><a href="docs/Resume,%20Anini%20Amoakon.pdf" download="Resume, Anini Amoakon.pdf"
 								onclick="trackResumeDownload()" class="button primary icon solid fa-download">Download
 								Resume </a>
 						</li>
-					</ul>
+					</ul> -->
 				</section>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/anini-amoakon/" target="_blank"
@@ -504,292 +544,13 @@
 					<li><a href="https://github.com/Anini-A" target="_blank" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
 				</ul>
-			</article>
-
-			<!-- Contact -->
-			<article id="contact">
-				<h2 class="major">📩Contact</h2>
-				<form method="post" action="#">
-					<div class="fields">
-						<div class="field half">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input type="text" name="email" id="email" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="4"></textarea>
-						</div>
-					</div>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" class="primary" /></li>
-						<li><input type="reset" value="Reset" /></li>
-					</ul>
-				</form>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/anini-amoakon/" target="_blank"
-							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://github.com/Anini-A" target="_blank" class="icon brands fa-github"><span
-								class="label">GitHub</span></a></li>
-				</ul>
-			</article>
-
-			<!-- Elements -->
-			<article id="elements">
-				<h2 class="major">Elements</h2>
-
-				<section>
-					<h3 class="major">Text</h3>
-					<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is
-						<em>emphasized</em>.
-						This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-						This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a
-							href="#">this is a link</a>.
-					</p>
-					<hr />
-					<h2>Heading Level 2</h2>
-					<h3>Heading Level 3</h3>
-					<h4>Heading Level 4</h4>
-					<h5>Heading Level 5</h5>
-					<h6>Heading Level 6</h6>
-					<hr />
-					<h4>Blockquote</h4>
-					<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus
-						euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis
-						iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem
-						ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-					<h4>Preformatted</h4>
-					<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-				</section>
-
-				<section>
-					<h3 class="major">Lists</h3>
-
-					<h4>Unordered</h4>
-					<ul>
-						<li>Dolor pulvinar etiam.</li>
-						<li>Sagittis adipiscing.</li>
-						<li>Felis enim feugiat.</li>
-					</ul>
-
-					<h4>Alternate</h4>
-					<ul class="alt">
-						<li>Dolor pulvinar etiam.</li>
-						<li>Sagittis adipiscing.</li>
-						<li>Felis enim feugiat.</li>
-					</ul>
-
-					<h4>Ordered</h4>
-					<ol>
-						<li>Dolor pulvinar etiam.</li>
-						<li>Etiam vel felis viverra.</li>
-						<li>Felis enim feugiat.</li>
-						<li>Dolor pulvinar etiam.</li>
-						<li>Etiam vel felis lorem.</li>
-						<li>Felis enim et feugiat.</li>
-					</ol>
-					<h4>Icons</h4>
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-					</ul>
-
-					<h4>Actions</h4>
-					<ul class="actions">
-						<li><a href="#" class="button primary">Default</a></li>
-						<li><a href="#" class="button">Default</a></li>
-					</ul>
-					<ul class="actions stacked">
-						<li><a href="#" class="button primary">Default</a></li>
-						<li><a href="#" class="button">Default</a></li>
-					</ul>
-				</section>
-
-				<section>
-					<h3 class="major">Table</h3>
-					<h4>Default</h4>
-					<div class="table-wrapper">
-						<table>
-							<thead>
-								<tr>
-									<th>Name</th>
-									<th>Description</th>
-									<th>Price</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>Item One</td>
-									<td>Ante turpis integer aliquet porttitor.</td>
-									<td>29.99</td>
-								</tr>
-								<tr>
-									<td>Item Two</td>
-									<td>Vis ac commodo adipiscing arcu aliquet.</td>
-									<td>19.99</td>
-								</tr>
-								<tr>
-									<td>Item Three</td>
-									<td> Morbi faucibus arcu accumsan lorem.</td>
-									<td>29.99</td>
-								</tr>
-								<tr>
-									<td>Item Four</td>
-									<td>Vitae integer tempus condimentum.</td>
-									<td>19.99</td>
-								</tr>
-								<tr>
-									<td>Item Five</td>
-									<td>Ante turpis integer aliquet porttitor.</td>
-									<td>29.99</td>
-								</tr>
-							</tbody>
-							<tfoot>
-								<tr>
-									<td colspan="2"></td>
-									<td>100.00</td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
-
-					<h4>Alternate</h4>
-					<div class="table-wrapper">
-						<table class="alt">
-							<thead>
-								<tr>
-									<th>Name</th>
-									<th>Description</th>
-									<th>Price</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>Item One</td>
-									<td>Ante turpis integer aliquet porttitor.</td>
-									<td>29.99</td>
-								</tr>
-								<tr>
-									<td>Item Two</td>
-									<td>Vis ac commodo adipiscing arcu aliquet.</td>
-									<td>19.99</td>
-								</tr>
-								<tr>
-									<td>Item Three</td>
-									<td> Morbi faucibus arcu accumsan lorem.</td>
-									<td>29.99</td>
-								</tr>
-								<tr>
-									<td>Item Four</td>
-									<td>Vitae integer tempus condimentum.</td>
-									<td>19.99</td>
-								</tr>
-								<tr>
-									<td>Item Five</td>
-									<td>Ante turpis integer aliquet porttitor.</td>
-									<td>29.99</td>
-								</tr>
-							</tbody>
-							<tfoot>
-								<tr>
-									<td colspan="2"></td>
-									<td>100.00</td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
-				</section>
-
-				<section>
-					<h3 class="major">Buttons</h3>
-					<ul class="actions">
-						<li><a href="#" class="button primary">Primary</a></li>
-						<li><a href="#" class="button">Default</a></li>
-					</ul>
-					<ul class="actions">
-						<li><a href="#" class="button">Default</a></li>
-						<li><a href="#" class="button small">Small</a></li>
-					</ul>
-					<ul class="actions">
-						<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
-						<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-					</ul>
-					<ul class="actions">
-						<li><span class="button primary disabled">Disabled</span></li>
-						<li><span class="button disabled">Disabled</span></li>
-					</ul>
-				</section>
-
-				<section>
-					<h3 class="major">Form</h3>
-					<form method="post" action="#">
-						<div class="fields">
-							<div class="field half">
-								<label for="demo-name">Name</label>
-								<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-							</div>
-							<div class="field half">
-								<label for="demo-email">Email</label>
-								<input type="email" name="demo-email" id="demo-email" value=""
-									placeholder="jane@untitled.tld" />
-							</div>
-							<div class="field">
-								<label for="demo-category">Category</label>
-								<select name="demo-category" id="demo-category">
-									<option value="">-</option>
-									<option value="1">Manufacturing</option>
-									<option value="1">Shipping</option>
-									<option value="1">Administration</option>
-									<option value="1">Human Resources</option>
-								</select>
-							</div>
-							<div class="field half">
-								<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-								<label for="demo-priority-low">Low</label>
-							</div>
-							<div class="field half">
-								<input type="radio" id="demo-priority-high" name="demo-priority">
-								<label for="demo-priority-high">High</label>
-							</div>
-							<div class="field half">
-								<input type="checkbox" id="demo-copy" name="demo-copy">
-								<label for="demo-copy">Email me a copy</label>
-							</div>
-							<div class="field half">
-								<input type="checkbox" id="demo-human" name="demo-human" checked>
-								<label for="demo-human">Not a robot</label>
-							</div>
-							<div class="field">
-								<label for="demo-message">Message</label>
-								<textarea name="demo-message" id="demo-message" placeholder="Enter your message"
-									rows="6"></textarea>
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="primary" /></li>
-							<li><input type="reset" value="Reset" /></li>
-						</ul>
-					</form>
-				</section>
-
 			</article>
 
 		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
-			<!-- <p class="copyright">&copy; Redesigned using <a href="https://html5up.net" target="_blank">HTML5</a>.</p> -->
+			<p class="copyright">&copy; Redesigned w/ <a href="https://html5up.net" target="_blank">HTML5</a>.</p>
 		</footer>
 
 	</div>
