--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 			<!-- Intro -->
 			<article id="intro">
-				<h2 class="major">👨🏾‍💻 ME</h2>
+				<h2 class="major">👨🏾‍💻 Intro</h2>
 				<!--<span class="image main"><img src="images/askmeanything.png" alt="" /></span>-->
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/anini-amoakon/" target="_blank"
@@ -144,7 +144,7 @@
 					<div class="education">
 						<div class="education-details">
 							<div class="education-logo-container">
-								<img src="images/USB logo.jpg" alt="Université de Saint-Boniface Logo"
+								<img src="images/USB logo.jpeg" alt="Université de Saint-Boniface Logo"
 									class="education-logo">
 							</div>
 							<hr class="divider">
@@ -240,7 +240,7 @@
 							</div>
 							<hr class="divider">
 							<div class="education-content">
-								<h5 class="education-title">SQL Bootcamp</h5>
+								<h5 class="education-title">SQL</h5>
 								<p class="education-institution">Wealthsimple</p>
 								<p class="education-date">2022</p>
 								<p class="education-degree">Professional development</p>
@@ -251,7 +251,37 @@
 					<div class="education">
 						<div class="education-details">
 							<div class="education-logo-container">
-								<img src="images/advancedda.png" alt="Google Logo" class="education-logo">
+								<img src="images/itilv4.png" alt="AXELOS ITIL V4 Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">ITIL V4</h5>
+								<p class="education-institution">AXELOS</p>
+								<p class="education-date">2020</p>
+								<p class="education-degree">Professional certificate</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<div class="education-logo-container">
+								<img src="images/thecommons.jpeg" alt="Google Logo" class="education-logo">
+							</div>
+							<hr class="divider">
+							<div class="education-content">
+								<h5 class="education-title">Product Management</h5>
+								<p class="education-institution">TheCommons</p>
+								<p class="education-date">2023</p>
+								<p class="education-degree">Professional certificate</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="education">
+						<div class="education-details">
+							<div class="education-logo-container">
+								<img src="images/loading.gif" alt="Google Logo" class="education-logo">
 							</div>
 							<hr class="divider">
 							<div class="education-content">
